<resources>
    <string name="app_name">Durak_OD</string>
    <string name="login">Login</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password">Password</string>
    <string name="number">Number</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notification</string>
    <string name="sign_in">Sign in</string>
    <string name="profile">Profile</string>
    <string name="locked">Locked</string>
    <string name="open">Open</string>
    <string name="money">Money </string>
    <string name="news">Новости</string>
    <string name="friends">Друзья</string>
    <string name="things">Предметы</string>
    <string name="honor_roll">Доска почета</string>
    <string name="achievements">Достижения</string>
    <string name="Settings">Настройки</string>
    <string name="share">Поделиться</string>
    <string name="rules">Правила</string>
    <string name="more_games">Еще игры</string>
    <string name="open_games">Открытые игры</string>
    <string name="filter_settings">Настойки фильтров</string>
    <string name="filter_money_range">Фильтр ставки</string>
    <string name="tables">Столы</string>
    <string name="default_game_name">Название комнаты или имена игроков</string>
    <string name="count_of_players">Количество Игроков</string>
    <string name="speed_of_game">Скорость игры</string>
    <string name="normal">Нормальная</string>
    <string name="speed">Быстрая</string>
    <string name="who_throws">Кто может подбрасывать</string>
    <string name="game_options">Варианты игры</string>
    <string name="neighbours">Соседи</string>
    <string name="all">Все</string>
    <string name="apply_filters">Применить фильтры</string>
    <string name="private_game">Приватная игра</string>
    <string name="create">Создать</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="download_photo">Загрузить фото</string>
    <string name="_1000000">1000000</string>
    <string name="russian">Русский</string>
    <string name="sound">Звук</string>
    <string name="vibration">Вибрация</string>
    <string name="right_action">Кнопка действия справа</string>
    <string name="turn_sort_cart">Развернуть сортировку карт</string>
    <string name="sort_by_value">Сортировка по значению</string>
    <string name="double_tap_action">Действие по двойному тапу</string>
    <string name="always_my_cart_shirt">Всегда моя рубашка карт</string>
    <string name="ready">готов</string>
</resources>
