<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_profile"
        
        android:icon="@drawable/user"
        android:title="@string/profile"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/navigation_open"
        android:icon="@drawable/open"
        android:title="@string/open"
        app:showAsAction="always"

        />

    <item
        android:id="@+id/navigation_locked"
        android:icon="@drawable/locked"
        android:title="@string/locked"
        app:showAsAction="always"

        />
    <item
        android:id="@+id/navigation_money"
        android:icon="@drawable/money"
        android:title="@string/money"
        app:showAsAction="always"

        />

</menu>
