<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/filter_range_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/filter_money_range"
        android:textColor="@color/appWhite"
        android:textSize="16sp" />

    <com.appyvet.materialrangebar.RangeBar
        android:id="@+id/rangebarMat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/filter_range_TV"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:mrb_connectingLineColors="@array/connecting_colors"
        app:mrb_pinColor="@color/colorAccent"
        app:mrb_rangeBar="true"
        app:mrb_rangeBarColor="@color/colorPrimary"
        app:mrb_selectorColor="@color/appWhite"
        app:mrb_temporaryPins="true"
        app:mrb_tickBottomLabels="@array/ticks_labels"
        app:mrb_tickColors="@color/appViolette"
        app:mrb_tickEnd="6"
        app:mrb_tickLabelSelectedColor="@color/appBlue"
        app:mrb_tickLabelSize="5dp"
        app:mrb_tickStart="1" />

    <LinearLayout
        android:id="@+id/num_of_players"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_below="@id/rangebarMat"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/count_of_players"
            android:textColor="@color/appWhite"
            android:textSize="16sp" />


        <LinearLayout
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_weight="1"

                android:id="@+id/filter_settings_checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textColor="@color/appWhite"
                android:textSize="16sp" />

            <TextView
                android:text="2"
                android:layout_marginLeft="-16dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/appWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox

                android:layout_weight="1"

                android:id="@+id/filter_settings_checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textColor="@color/appWhite"
                android:textSize="16sp" />

            <TextView
                android:text="3"
                android:layout_marginLeft="-16dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/appWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox

                android:layout_weight="1"

                android:id="@+id/filter_settings_checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textColor="@color/appWhite"
                android:textSize="16sp" />

            <TextView
                android:text="4"
                android:layout_marginLeft="-16dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/appWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox

                android:layout_weight="1"

                android:id="@+id/filter_settings_checkbox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textColor="@color/appWhite"
                android:textSize="16sp" />

            <TextView
                android:text="5"
                android:layout_marginLeft="-16dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/appWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox

                android:layout_weight="1"

                android:id="@+id/filter_settings_checkbox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textColor="@color/appWhite"
                android:textSize="16sp" />

            <TextView
                android:text="6"
                android:layout_marginLeft="-16dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/appWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/speed_of_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/num_of_players"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/speed_of_game"
            android:textColor="@color/appWhite"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/speed_of_game_normal_mode"
                    android:layout_width="40dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="center"
                    android:layout_height="40dp" />
                <TextView
                    android:text="@string/normal"
                    android:textSize="12sp"
                    android:layout_gravity="center"
                    android:textColor="@color/appWhite"
                    android:paddingBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout

                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:layout_gravity="center"
                    android:focusable="true"
                    android:clickable="true"
                    android:id="@+id/speed_of_game_fast_mode"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />

                <TextView
                    android:text="@string/speed"
                    android:textSize="12sp"
                    android:layout_gravity="center"
                    android:textColor="@color/appWhite"
                    android:layout_marginBottom="8dp"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/options_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:gravity="center"
        android:layout_below="@id/speed_of_game"
        android:orientation="horizontal"
        android:padding="8dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/who_throws"
                    android:textSize="12sp"
                    android:layout_gravity="center"
                    android:textColor="@color/appWhite"
                    android:layout_marginBottom="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">



                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <CheckBox
                            android:id="@+id/throw_neighbours"
                            android:layout_width="40dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_gravity="center"
                            android:layout_height="40dp" />


                        <TextView
                            android:text="@string/neighbours"
                            android:textSize="12sp"
                            android:layout_gravity="center"
                            android:textColor="@color/appWhite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <CheckBox
                            android:id="@+id/throw_all"
                            android:layout_width="40dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_gravity="center"
                            android:layout_height="40dp" />


                        <TextView
                            android:text="@string/all"
                            android:textSize="12sp"
                            android:layout_gravity="center"
                            android:textColor="@color/appWhite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView

                    android:text="@string/game_options"
                    android:textSize="12sp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"

                    android:textColor="@color/appWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_gravity="center"
                    android:focusable="true"
                    android:clickable="true"
                    android:id="@+id/passinOn"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />

                <TextView
                    android:text="Переводной"
                    android:textSize="12sp"
                    android:layout_gravity="center"
                    android:textColor="@color/appWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

    </LinearLayout>

    <LinearLayout

        android:layout_below="@id/options_part"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:layout_marginStart="8dp"
            android:id="@+id/private_game_Checkbox"
            android:background="@drawable/private_game_icon"
            android:layout_gravity="center"
            android:textColor="@color/appWhite"
            android:textSize="14sp"
            android:layout_width="32dp"
            android:layout_height="32dp" />
        <TextView
            android:text="@string/private_game"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/appWhite"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/applyFilterButton"
            android:background="@drawable/button_rectangle"
            android:layout_gravity="right|center_vertical"
            android:text="@string/create"
            android:textAlignment="center"
            android:textColor="@color/appWhite"
            android:textSize="14sp"
            android:layout_width="116dp"
            android:layout_height="32dp" />


        
    </LinearLayout>


</RelativeLayout>