<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="8dp"
    android:paddingStart="16dp"
    tools:context="view.fragment.SettingsFragment">

    <FrameLayout
        android:id="@+id/profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/gradient_to_plus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_photo_profile"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_gravity="center"
            android:src="@drawable/user_image" />


    </FrameLayout>


    <TextView
        android:id="@+id/usernameTV_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/appWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profile"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/download_profile_photo"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_rectangle_button"
        android:text="@string/download_photo"
        android:textColor="@color/appWhite"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile" />

    <ImageView
        android:id="@+id/money_pic"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:src="@drawable/funds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/profile"
        app:layout_constraintTop_toBottomOf="@id/usernameTV_profile" />

    <ImageView
        android:id="@+id/divider_pic"
        android:layout_width="32dp"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_rectangle_divider"
        app:layout_constraintEnd_toEndOf="@id/coin_pic"
        app:layout_constraintStart_toStartOf="@id/money_pic"
        app:layout_constraintTop_toBottomOf="@id/usernameTV_profile" />

    <ImageView
        android:id="@+id/coin_pic"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:src="@drawable/coin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/divider_pic"
        app:layout_constraintTop_toBottomOf="@id/usernameTV_profile" />

    <TextView
        android:id="@+id/TV_money_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_1000000"
        android:textColor="@color/appWhite"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/money_pic"
        app:layout_constraintTop_toBottomOf="@id/money_pic" />

    <TextView
        android:id="@+id/TV_funds_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_1000000"
        android:textColor="@color/appWhite"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/coin_pic"
        app:layout_constraintTop_toBottomOf="@id/coin_pic" />


    <ScrollView
        tools:context=".view.activity.NewsActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:orientation="vertical"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/download_profile_photo">


        <LinearLayout
            android:orientation="vertical"
            android:isScrollContainer="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/app_lang_IV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_russian_flag_36">

                    </ImageView>
                    <TextView

                        android:id="@+id/app_lang_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/russian"
                        android:textColor="@color/appWhite"
                        android:textSize="16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:id="@+id/sound_settings_IV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:button="@drawable/sound_checkbox"/>

                    <TextView
                        android:id="@+id/sound_settings_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/sound"
                        android:textColor="@color/appWhite"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <CheckBox
                        android:id="@+id/vibration_settings_IV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:button="@drawable/vibration_checkbox" />

                    <TextView
                        android:id="@+id/vibration_settings_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/vibration"
                        android:textColor="@color/appWhite"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>


            <ImageView
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_rectangle_horizontal_divider"
                app:layout_constraintTop_toBottomOf="@id/vibration_settings_IV" />

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">


                    <CheckBox
                        android:id="@+id/turn_sorting_settings_IV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:button="@drawable/double_tap_action_checkbox"/>

                    <TextView
                        android:gravity="center"

                        android:id="@+id/turn_sorting_settings_TV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/turn_sort_cart"
                        android:textColor="@color/appWhite"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">


                    <CheckBox
                        android:id="@+id/right_click_action_settings_IV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:button="@drawable/right_action_button_checkbox"/>

                    <TextView
                        android:gravity="center"
                        android:id="@+id/right_click_action_settings_TV"
                        android:layout_width="@dimen/_100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/right_action"
                        android:textColor="@color/appWhite"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <CheckBox
                        android:id="@+id/sort_by_value_settings_IV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:button="@drawable/sort_by_value_checkbox"/>

                    <TextView
                        android:gravity="center"
                        android:id="@+id/sort_by_value_settings_TV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/sort_by_value"
                        android:textColor="@color/appWhite"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>



            <ImageView
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_rectangle_horizontal_divider"
                app:layout_constraintTop_toBottomOf="@id/sort_by_value_settings_IV" />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:id="@+id/double_tap_action_settings_IV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:button="@drawable/double_tap_action_checkbox" />

                    <TextView
                        android:id="@+id/double_tap_action_settings_TV"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/double_tap_action"
                        android:textColor="@color/appWhite"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/always_cart_shirt_settings_IV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:button="@drawable/always_my_shirt_checkbox"/>

                    <TextView
                        android:id="@+id/always_cart_shirt_settings_TV"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/always_my_cart_shirt"
                        android:textColor="@color/appWhite"
                        android:textSize="16sp"/>
                </LinearLayout>

            </LinearLayout>



        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
